# CustomModeratorBadge

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
src/: CustomProfileBadges.cpp  CustomProfileBadges.hpp  ProfileBadges.cpp  ProfileBadges.hpp  dllmain.cpp
src/Hooks/: CommentCell.cpp  CommentCell.hpp  ProfilePage.cpp  ProfilePage.hpp  ReplacementLogic.cpp  ReplacementLogic.hpp
src/Safety/: MemoryTest.cpp  MemoryTest.hpp  Tester.cpp  Tester.hpp
